--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -288,7 +288,7 @@
 	android:layout_gravity="center_vertical"/>
 </LinearLayout>
 
-<!-- Bootanimation
+<!-- Bootanimation -->
 <LinearLayout
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
@@ -310,7 +310,7 @@
 	android:layout_height="wrap_content"
 	android:layout_marginRight="4dip"
 	android:layout_gravity="center_vertical"/>
-</LinearLayout> -->
+</LinearLayout>
 
 <!-- Service Mode -->
 <LinearLayout
