--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -15,6 +15,13 @@
     <string name="TVbootani">Use smaller bootanimation</string>
     <string name="TVservicemode">Open Samsung service mode</string>
 	<string name="TVkitchen">Open GAOSP Kitchen</string>
+	<string name="TVmemorythresholds">Memory thresholds</string>	
+	<string name="TVforegroundapp">Foreground app</string>
+	<string name="TVvisibleapp">Visible app</string>
+	<string name="TVsecondaryapp">Secondary Server</string>
+	<string name="TVhiddenapp">Hidden app</string>
+	<string name="TVcontentapp">Content provider</string>
+	<string name="TVemptyapp">Empty app</string>	
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
